# src/api/gen/model/index.ts
@@ -32,11 +32,11 @@ export * from './bankBatchBody.ts';
 export * from './bankCommentInputBody.ts';
 export * from './bankCopyInputBody.ts';
 export * from './bankCopyOutputBody.ts';
-export * from './bankListBody.ts';
 export * from './bankMarksOutputBody.ts';
 export * from './bankMarksOutputBodyMarks.ts';
 export * from './bankProgressOutputBody.ts';
 export * from './bankQuestionBatchParams.ts';
+export * from './bankQuestionsParams.ts';
 export * from './bankReviewInputBody.ts';
 export * from './bankSaveInputBody.ts';
 export * from './bankSaveInputBodyQuestion.ts';
@@ -285,6 +285,7 @@ export * from './tagInput.ts';
 export * from './task.ts';
 export * from './toolError.ts';
 export * from './topic.ts';
+export * from './topicPage.ts';
 export * from './topicProgress.ts';
 export * from './transferWorkspaceReq.ts';
 export * from './trashActionReq.ts';
